타이틀 수정, 스타일 입력

--- a/장고_0723_최종버전테스트/players/templates/players/team_manage.html
+++ b/장고_0723_최종버전테스트/players/templates/players/team_manage.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>team_management</title>
+  <title>팀 관리</title>
   <link rel="stylesheet" href="/static/css/basic_layout_style.css">
   <link rel="stylesheet" href="/static/css/login_style.css">
   <link rel="stylesheet" href="/static/KU_B/font.css">
@@ -28,6 +28,9 @@
     #underline1{
       border-bottom: 2px solid #C7B9AB;
       margin-bottom : 20px;
+    }
+    #aside_img_login{
+      padding-bottom: 100px;
     }
 
   </style>
