--- a/장고_0723_최종버전테스트/users/templates/notification_board.html
+++ b/장고_0723_최종버전테스트/users/templates/notification_board.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <title>KUMATCH_notification</title>
+    <title>공지사항</title>
     <link rel="stylesheet" href="{% static 'css/basic_layout_style.css' %}">
     <link rel="stylesheet" href="{% static 'css/image_slide_index_style.css' %}">
     <link rel="stylesheet" href="{% static 'css/notification_board_style.css' %}">
