--- a/장고_0723_최종버전테스트/match/templates/my_matchlist.html
+++ b/장고_0723_최종버전테스트/match/templates/my_matchlist.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>team_management</title>
+  <title>나의 경기 현황</title>
   <link rel="stylesheet" href="/static/css/basic_layout_style.css">
   <link rel="stylesheet" href="/static/css/login_style.css">
   <link rel="stylesheet" href="/static/KU_B/font.css">
