--- a/장고_0723_최종버전테스트/teams/templates/teams/board3_main.html
+++ b/장고_0723_최종버전테스트/teams/templates/teams/board3_main.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <title>KUMATCH_board1</title>
+    <title>사진 게시판</title>
     <link rel="stylesheet" href="css/basic_layout_style.css">
     <link rel="stylesheet" href="css/image_slide_index_style.css">
     <link rel="stylesheet" href="css/slider_1.css">
