--- a/장고_0723_최종버전테스트/users/templates/login_ver2.html
+++ b/장고_0723_최종버전테스트/users/templates/login_ver2.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>login</title>
+  <title>KUMATCH 로그인</title>
   <link rel="stylesheet" href="{% static 'css/basic_layout_style.css' %}">
   <link rel="stylesheet" href="{% static 'css/login_style.css' %}">
   <link rel="stylesheet" href="{% static 'KU_B/font.css' %}">
