--- a/장고_0723_최종버전테스트/teams/templates/teams/board_main_ver2.html
+++ b/장고_0723_최종버전테스트/teams/templates/teams/board_main_ver2.html
@@ -97,7 +97,7 @@
       <div id="board_name1">
        <h2 style="  font-family: KorUL; color :#8B2331;">팀 소개 게시판</h2><br>
        <div id=write_button> <a href="{% url 'teams:reg' %}" ><button class="btn btn-primary" type="button" >신규 팀 등록</button></a> </div>
-       <div id=line1> </div>
+       <div id=line1></div>
           <table border="1" width="800" align="center" cellspacing="0" >
             <thead>
             <tr>
@@ -131,7 +131,7 @@
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a><br><br><br>
           <div id="match_condition"><a href="{% url 'match:my_matlst' %}"><img id="football_img" src="/static/img/football.png">  나의 경기 현황</a></div><br><br>
                   {% if user.is_authenticated %} <!-- 로그인 되어있으면 정보수정 창으로-->
-          <div id="modify_my_info"><a href="{% url 'user:info' %}"><img id="settings_img" src="/static/img/settings.png">  정보 수정</a></div><br><br>
+          <div id="modify_my_info"><a href="{% url 'user:info' user.pk %}"><img id="settings_img" src="/static/img/settings.png">  정보 수정</a></div><br><br>
                   {% else %}
           <div id="modify_my_info"><a href="{% url 'user:login' %}"><img id="settings_img" src="/static/img/settings.png">  정보 수정</a></div><br><br>
                   {% endif %}
