--- a/장고_0723_최종버전테스트/users/templates/introduction_base.html
+++ b/장고_0723_최종버전테스트/users/templates/introduction_base.html
@@ -47,7 +47,7 @@
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a><br><br><br>
           <div id="match_condition"><a href="{% url 'match:my_matlst' %}"><img id="football_img" src="/static/img/football.png">  나의 경기 현황</a></div><br><br>
                   {% if user.is_authenticated %} <!-- 로그인 되어있으면 정보수정 창으로-->
-          <div id="modify_my_info"><a href="{% url 'user:info' %}"><img id="settings_img" src="/static/img/settings.png">  정보 수정</a></div><br><br>
+          <div id="modify_my_info"><a href="{% url 'user:info' user.pk %}"><img id="settings_img" src="/static/img/settings.png">  정보 수정</a></div><br><br>
                   {% else %}
           <div id="modify_my_info"><a href="{% url 'user:login' %}"><img id="settings_img" src="/static/img/settings.png">  정보 수정</a></div><br><br>
                   {% endif %}
