인원모집게시판 완성

--- a/장고_0723_최종버전테스트/teams/templates/teams/board_update.html
+++ b/장고_0723_최종버전테스트/teams/templates/teams/board_update.html
@@ -111,7 +111,7 @@
 	</tr>
     <tr>
 		<th>소 개</th>
-      <td><textarea class="form-control" name="memo" style="width:400px; height:400px"></textarea></td>
+      <td><textarea class="form-control" name="memo" style="width:400px; height:400px">{{team_info.t_memo}}</textarea></td>
 	</tr>
     <tr>
 		<th>대표자</th>
