--- a/장고_0723_최종버전테스트/teams/templates/teams/board2_create.html
+++ b/장고_0723_최종버전테스트/teams/templates/teams/board2_create.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <title>인원 모집 게시판</title>
+    <title>인원 모집 게시판 등록</title>
     <link rel="stylesheet" href="{% static 'css/basic_layout_style.css' %}">
     <link rel="stylesheet" href="{% static 'css/image_slide_index_style.css' %}">
     <link rel="stylesheet" href="{% static 'css/slider_1.css' %}">
@@ -88,7 +88,7 @@
       <div id="board_grid">
       <div class="board_main">
           <div id="board_menu">
-            <span><img id=board_img_1 src="/static/img/board_1.png"> <a href="{% url 'teams:teamAll' %}" style="font-size : 15px; position:relative; top:-20px; text-decoration : none; color : black;">팀 소개 게시판</a></span><br>
+            <span><img id=board_img_1 src="/static/img/board_1.png"> <a href="{% url 'teams:teamAll' %}" style="font-size : 15px; position:relative; top:-20px; text-decoration : none; color : blackd;">팀 소개 게시판</a></span><br>
             <span><img id=board_img_2 src="/static/img/board_2.png"> <a href="{% url 'teams:recruitAll' %}" style="font-size : 15px; position:relative; top:-20px; text-decoration : none; color : black;">인원 모집 게시판</a></span><br>
             <span><img id=board_img_3 src="/static/img/board_3.png"> <a href="board_3.html" style="font-size : 15px; position:relative; top:-20px; text-decoration : none; color : black;">사진 게시판</a></span><br>
         </div>
@@ -96,33 +96,25 @@
 
       <div id="board_name1">
        <h2 style="  font-family: KorUL; color :#8B2331;">인원 모집 게시판</h2><br>
-       <div id=write_button> <a href="{% url 'teams:recruitNew' %}" ><button class="btn btn-primary" type="button" > 모집글 작성 </button></a> </div>
        <div id=line1> </div>
-          <table border="1" width="800" align="center" cellspacing="0" >
-            <thead>
-            <tr>
-              <th width="150" align="center" bgcolor="#FFF0F0"> 번 호 </th>
-              <th width="400" align="center" bgcolor="#FFF0F0"> 제 목 </th>
-              <th width="200" align="center" bgcolor="#FFF0F0"> 작성자 </th>
-              <th width="200" align="center" bgcolor="#FFF0F0"> 작성일 </th>
-            </tr>
-          </thead>
-          <tbody align = "center">
-        {% if recruit_list %}
-        {% for r in recruit_list %}
-          <tr onclick="location.href='{% url 'teams:recruitDet' r.id %}'">  <!-- 테이블 행 click 시 url 이동 -->
-            <td>{{ r.pk }}</td>
-            <td>{{ r.r_title }}</td>
-            <td>{{ r.r_writer }}</td>
-            <td>{{ r.r_date | date:"Y-m-d H:i" }}</td>
-          </tr>
-        {% endfor %}
-        {% else %}
-			<tr></tr><td>글이 없습니다.</td>
-		{% endif %}
-        </tbody>
-
+          <form action="{% url 'teams:recruitCon' %}" method="post" class="form-horizontal">
+    {% csrf_token %}                                     <!-- csrftoken 태그 -->
+      <table class="table table-striped table-bordered" border="1" width="800" align="center" cellspacing="0" >
+	<tr>
+		<th>제 목</th>
+		<td><input type="text" class="form-control" name="title"></td>
+	</tr>
+    <tr>
+		<th>내 용</th>
+      <td><textarea class="form-control" name="memo" style="width:400px; height:400px"></textarea></td>
+	</tr>
+    <tr>
+		<th>대표자</th>
+		<td><input type="text" class="form-control" name="writer" value="{{ user.nname }}" readonly></td>
+	</tr>
         </table>
+        <button class="btn btn-primary" type="submit" name="Register">등록</button>
+      </form>
       </div>
       </div>
 
