--- a/장고_0723_최종버전테스트/teams/templates/teams/board2_detail.html
+++ b/장고_0723_최종버전테스트/teams/templates/teams/board2_detail.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <title>인원 모집 게시판</title>
+    <title>인원 모집 게시판 상세보기</title>
     <link rel="stylesheet" href="{% static 'css/basic_layout_style.css' %}">
     <link rel="stylesheet" href="{% static 'css/image_slide_index_style.css' %}">
     <link rel="stylesheet" href="{% static 'css/slider_1.css' %}">
@@ -94,39 +94,41 @@
         </div>
       </div>
 
-      <div id="board_name1">
-       <h2 style="  font-family: KorUL; color :#8B2331;">인원 모집 게시판</h2><br>
-       <div id=write_button> <a href="{% url 'teams:recruitNew' %}" ><button class="btn btn-primary" type="button" > 모집글 작성 </button></a> </div>
-       <div id=line1> </div>
-          <table border="1" width="800" align="center" cellspacing="0" >
-            <thead>
-            <tr>
-              <th width="150" align="center" bgcolor="#FFF0F0"> 번 호 </th>
-              <th width="400" align="center" bgcolor="#FFF0F0"> 제 목 </th>
-              <th width="200" align="center" bgcolor="#FFF0F0"> 작성자 </th>
-              <th width="200" align="center" bgcolor="#FFF0F0"> 작성일 </th>
-            </tr>
-          </thead>
-          <tbody align = "center">
-        {% if recruit_list %}
-        {% for r in recruit_list %}
-          <tr onclick="location.href='{% url 'teams:recruitDet' r.id %}'">  <!-- 테이블 행 click 시 url 이동 -->
-            <td>{{ r.pk }}</td>
-            <td>{{ r.r_title }}</td>
-            <td>{{ r.r_writer }}</td>
-            <td>{{ r.r_date | date:"Y-m-d H:i" }}</td>
-          </tr>
-        {% endfor %}
-        {% else %}
-			<tr></tr><td>글이 없습니다.</td>
-		{% endif %}
-        </tbody>
+  <div id="board_name1">
+   <h2 style="  font-family: KorUL; color :#8B2331;">인원 모집 게시판</h2><br>
+   <div id=line1> </div>
+      <table class="table table-striped table-bordered" border="1" width="800" align="center" cellspacing="0" >
+        <tr>
+		<th>번호</th>
+		<td>{{ recruit_info.pk }}</td>
+	</tr>
+	<tr>
+		<th>제 목</th>
+		<td>{{recruit_info.r_title}}</td>
+	</tr>
+	<tr>
+		<th>내 용</th>
+		<td>{{recruit_info.r_memo | linebreaksbr }}</td>
+	</tr>
+    <tr>
+		<th>작성자</th>
+		<td>{{recruit_info.r_writer}}</td>
+	</tr>
+    <tr>
+		<th>작성일</th>
+		<td>{{recruit_info.r_date}}</td>
+	</tr>
+      </table>
+      {% if recruit_info.r_writer == user.nname %}
+        <a href="{% url 'teams:recruitMod' recruit_info.pk %}"><button class="btn btn-primary" type="button"> 수 정 </button></a>
+        <a href="{% url 'teams:recruitDel' recruit_info.pk %}"><button class="btn btn-primary" type="button"> 삭 제 </button></a>
+      {% endif %}
 
-        </table>
-      </div>
-      </div>
 
-      <aside>
+  </div>
+  </div>
+
+  <aside>
         <div id="mySidenav" class="sidenav">
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a><br><br><br>
           <div id="match_condition"><a href="{% url 'match:my_matlst' %}"><img id="football_img" src="/static/img/football.png">  나의 경기 현황</a></div><br><br>
