--- a/장고_0723_최종버전테스트/match/templates/my_matchlist.html
+++ b/장고_0723_최종버전테스트/match/templates/my_matchlist.html
@@ -98,7 +98,7 @@
       <table width ="1000">
         <tr align ="center">
           <td width="1500" style="font-size:25px; font-family : KorHB; padding : 15px;">내가 등록한 경기</td>
-          <td><span><a href="#"><input type="button" id="match_register" name="match_register" value="매치 등록하기"></a></span></td>
+          <td><span><a href="{% url 'match:my_matlst' %}"><input type="button" id="match_register" name="match_register" value="매치 등록하기"></a></span></td>
         </tr>
       </table>
 
