--- a/장고_0723_최종버전테스트/users/templates/basic_layout.html
+++ b/장고_0723_최종버전테스트/users/templates/basic_layout.html
@@ -154,7 +154,7 @@
             </div>
             <button id="prev-btn">prev</button>
             <button id="next-btn">next</button>
-            <span><a href="{% url 'match:my_matlst' %}"><input type="button" id="match_register" name="match_register" value="매치 등록하기"></a></span>
+            <span><a href="{% url 'match:reg_match' %}"><input type="button" id="match_register" name="match_register" value="매치 등록하기"></a></span>
         </section>
         <script src="/static/js/slide_1.js"></script></div>
       <div id="underline1"></div>
