--- a/장고_0723_최종버전테스트/match/templates/match_main.html
+++ b/장고_0723_최종버전테스트/match/templates/match_main.html
@@ -154,7 +154,7 @@
             </div>
             <button id="prev-btn">prev</button>
             <button id="next-btn">next</button>
-            <span><a href="{% url 'match:my_matlst' %}"><input type="button" id="match_register" name="match_register" value="매치 등록하기"></a></span>
+            <span><a href="{% url 'match:reg_match' %}"><input type="button" id="match_register" name="match_register" value="매치 등록하기"></a></span>
         </section>
         <script src="/static/js/slide_1.js"></script></div>
       <form action="{% url 'players:regCon' %}" method="post">
@@ -181,12 +181,12 @@
             <td>{{ m.m_num }}</td>
             <td>
                 {% if m.m_nname == user.nname %}
-                <a>내가 만든거임</a>
+                <a href="{% url 'match:delMatch' m.pk %}"><input type="button" value="매치 취소"></a>
                 {% elif m.m_rival %}
                     {% if m.m_rival == user.nname %}
-                    <a href="{% url 'match:delRival' user.nname m.pk %}"><input type="button" value="취소"></a>
+                    <a href="{% url 'match:delRival' user.nname m.pk %}"><input type="button" value="신청 취소"></a>
                     {% else %}
-                    <a href="#"><input type="button" value="**마감임박!!**"></a>
+                    <a>**마감 임박**</a>
                     {% endif %}
                 {% else %}
                 <a href="{% url 'match:matching' user.nname m.pk %}"><input type="button" value="신청가능"></a>
